kubernetes/deployment.yml
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  selector:
    matchLabels:
      app: hello-app
  replicas: 3 # tells deployment to run 3 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app
          image: k8sexample/hello-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: server
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 3
            failureThreshold: 1
