kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: hello-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: hello-app
