kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: hello-kubernetes-gw
      http:
        paths:
          - path: /person-names
            backend:
              serviceName: person-names-service
              servicePort: 9090
          - path: /hello
            backend:
              serviceName: hello-service
              servicePort: 8080
